[package]
edition = "2021"
name = "actix-blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
tokio-postgres = "0.7.6"
tokio = { version = "1", features = ["full"] }
